Fix caret not centered on Firefox and change place holder in answer bar

--- a/src/js/answerBar/answerBar.css
+++ b/src/js/answerBar/answerBar.css
@@ -17,18 +17,13 @@
 }
 
 
-/* Place holder */
-#answer-bar .input:empty:before {
-  content: attr(placeholder);
-  pointer-events: none;
-  color: rgb(128, 128, 128);
-  background-color: transparent;
-  font-size: 0.6em;
-  line-height: 1em;
-  opacity: 0.3;
-  font-family: 'Luckiest Guy', cursive;
-  vertical-align: middle;
+
+#answer-bar .container {
+  position: relative;
+  font-size: clamp(1rem, 6.5vmin, 4rem);
 }
+
+
 
 /* Answer bar is disabled */
 #answer-bar.disabled {
@@ -61,7 +56,6 @@
 
   outline: 0px solid transparent;
   max-height: 30vh;
-
   min-height: var(--answer-bar-height);
 
   flex: 2;
@@ -79,6 +73,7 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
 
 
 #answer-bar .input::-webkit-scrollbar {
@@ -113,4 +108,32 @@
 
 #answer-bar.disabled .submit-button-container>img {
   opacity: 0.5;
+}
+
+
+
+
+/* Place holder */
+#answer-bar .place-holder {
+  border: 1px solid green;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+  color: rgb(128, 128, 128);
+  background-color: transparent;
+  font-size: 0.6em;
+  line-height: 1em;
+  opacity: 0.3;
+  font-family: 'Luckiest Guy', cursive;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;  
+}
+
+#answer-bar .place-holder.hide {  
+  display: none;
 }
